@@ -1,3 +1,5 @@
++ add support to change blacklist (flori)
+
 v 0.2.5 - 31.03.2008
 =====================================================================
 + added link to own peer stats at statusbar (daburna) 
